[package]
name = "aoc2019"
version = "0.1.0"
authors = ["James Roger McMurray <jamcmurr@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rayon = "1.3.0"
itertools = "0.8.2"
num = "0.2.0"
enum_derive = "0.1.7"
macro-attr = "0.2.0"
regex = "1.3.1"
lazy_static = "1.4.0"
